Finished the card model in the html and fixed the date

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,11 @@
 
         <% articles.forEach(article => { %>
             <div class="card mt-4">
-                <%= article.title %>
+                <div class="card-body">
+                    <h4 class="card-title"><%= article.title %></h4>
+                    <p class="card-date text-muted mb-2"><%= article.createDate.toLocaleDateString()%></p>
+                    <p class="card-text mb-2"><%= article.description %></p>
+                </div>
             </div>
         <%}); %>
     </div>
