--- a/views/articles/_form_fields.ejs
+++ b/views/articles/_form_fields.ejs
@@ -5,12 +5,12 @@
 
 <div class="form-group">
     <label for="description">Description</label>
-    <textarea required type="text" name="description" id="description" class="form-control"></textarea>
+    <textarea type="text" name="description" id="description" class="form-control"></textarea>
 </div>
 
 <div class="form-group">
     <label for="markdown">Markdown</label>
-    <textarea required type="text" name="markdown" id="markdown" class="form-control"></textarea>
+    <textarea type="text" name="markdown" id="markdown" class="form-control"></textarea>
 </div>
 
 <a href="/" class="btn btn-secondary mt-4">Cancel</a>
