Fixed a mistake in the form ''action" and "method" which was preventing the form from submitting and added a value attribute to the inputs

--- a/views/articles/new.ejs
+++ b/views/articles/new.ejs
@@ -10,8 +10,8 @@
     <div class="container">
         <h1 class="mb-4">New Article</h1>
 
-        <form action="post" method="/articles">
-            <%- include('_form_fields')%>
+        <form action="/articles" method="POST">
+            <%- include('_form_fields', {article: article})%>
         </form>
     </div>
 </body>
