--- a/views/articles/_form_fields.ejs
+++ b/views/articles/_form_fields.ejs
@@ -1,16 +1,29 @@
 <div class="form-group">
     <label for="title">Title</label>
-    <input required type="text" name="title" id="title" class="form-control">
+    <input required 
+           type="text" 
+           name="title" 
+           id="title" 
+           class="form-control"
+           value="<%=article.title%>">
 </div>
 
 <div class="form-group">
     <label for="description">Description</label>
-    <textarea type="text" name="description" id="description" class="form-control"></textarea>
+    <textarea 
+        type="text" 
+        name="description" 
+        id="description" 
+        class="form-control"><%=article.description%></textarea>
 </div>
 
 <div class="form-group">
     <label for="markdown">Markdown</label>
-    <textarea type="text" name="markdown" id="markdown" class="form-control"></textarea>
+    <textarea 
+        type="text" 
+        name="markdown" 
+        id="markdown" 
+        class="form-control"><%=article.markdown%></textarea>
 </div>
 
 <a href="/" class="btn btn-secondary mt-4">Cancel</a>
