--- a/views/articles/_form_fields.ejs
+++ b/views/articles/_form_fields.ejs
@@ -19,7 +19,8 @@
 
 <div class="form-group">
     <label for="markdown">Markdown</label>
-    <textarea 
+    <textarea
+        required
         type="text" 
         name="markdown" 
         id="markdown" 
