--- a/views/articles/show.ejs
+++ b/views/articles/show.ejs
@@ -8,7 +8,12 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="mb-4"><%= article.title %></h1>
+        <h1 class="mb-1"><%= article.title %></h1>
+        <div class="text-muted mb-2"><%= article.createDate.toLocaleDateString()%></div>
+        <a href="/" class=" btn btn-secondary">All Articles</a>
+        <a href="/articles/edit/<%= article.id %>" 
+            class=" btn btn-info"
+            style="color:white">Edit</a>
     </div>
 </body>
 </html>
