--- a/views/articles/show.ejs
+++ b/views/articles/show.ejs
@@ -14,6 +14,9 @@
         <a href="/articles/edit/<%= article.id %>" 
             class=" btn btn-info"
             style="color:white">Edit</a>
+        <a href="#"
+            class="btn btn-danger">Delete</a>
+        <p><%= article.markdown %></p>
     </div>
 </body>
 </html>
