--- a/views/articles/index.ejs
+++ b/views/articles/index.ejs
@@ -18,6 +18,14 @@
                     <p class="card-date text-muted mb-2"><%= article.createDate.toLocaleDateString()%></p>
                     <p class="card-text mb-2"><%= article.description %></p>
                     <a href="/articles/<%= article.slug%>" class="btn btn-primary">Read More..</a>
+                    <a href="/articles/edit/<%= article.id %>" 
+                        class=" btn btn-info"
+                        style="color:white">Edit</a>
+                    <form action="/articles/<%= article.id %>?_method=DELETE"
+                        method="POST"
+                        class="d-inline">
+                    <button type="submit" class="btn btn-danger">Delete</button>    
+                </form>
                 </div>
             </div>
         <%}); %>
